--- a/src/app/headernavbar/headernavbar.component.html
+++ b/src/app/headernavbar/headernavbar.component.html
@@ -7,7 +7,10 @@
     </ul>
   </span>
   <span class="username-span-container">
-    <span class="userinfo-span">
+    <span [matMenuTriggerFor]="menu" class="userinfo-span">
+      <mat-menu #menu="matMenu">
+        <button (click)="logout()" mat-menu-item>Log out</button>
+      </mat-menu>
       Ty Tran <img style="height: 10px" src="./assets/caret-down.png" alt="">
     </span>
     <span class="username-picture">
