--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -29,7 +29,7 @@
           <input [(ngModel)]="passwordInput" placeholder="Password" type="password" style="padding: 0px; position: relative; width: 100%; border: none; outline: none; background-color: rgba(0, 0, 0, 0); color: rgb(112, 120, 125); cursor: initial; font: inherit; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); height: 100%;">
         </div>
         <div class="form-login-main">
-          <input placeholder="Retype Password" type="password" style="padding: 0px; position: relative; width: 100%; border: none; outline: none; background-color: rgba(0, 0, 0, 0); color: rgb(112, 120, 125); cursor: initial; font: inherit; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); height: 100%;">
+          <input [(ngModel)]="passwordRetype" placeholder="Retype Password" type="password" style="padding: 0px; position: relative; width: 100%; border: none; outline: none; background-color: rgba(0, 0, 0, 0); color: rgb(112, 120, 125); cursor: initial; font: inherit; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); height: 100%;">
         </div>
         <div class="form-login-button">
           <button (click)="registerButton()" type="submit" class="btn btn-primary">Sign Up</button>
