--- a/src/app/headernavbar/headernavbar.component.html
+++ b/src/app/headernavbar/headernavbar.component.html
@@ -11,7 +11,7 @@
       <mat-menu #menu="matMenu">
         <button (click)="logout()" mat-menu-item>Log out</button>
       </mat-menu>
-      Ty Tran <img style="height: 10px" src="./assets/caret-down.png" alt="">
+      Dupire <img style="height: 10px" src="./assets/caret-down.png" alt="">
     </span>
     <span class="username-picture">
       <img style="height: 30px;border-radius: 50%;" src="https://scontent-hkg3-2.xx.fbcdn.net/v/t1.0-1/p320x320/37915537_1722032594582015_4516206765133529088_n.jpg?_nc_cat=103&_nc_oc=AQma9xzDdgJ5SGOoFCikz5dT4Xp1is58V6q5rzxoWFopXfa9YmhQgE3xmdV1ouTNlzs&_nc_ht=scontent-hkg3-2.xx&oh=85758007f6a2be28eea38668c0e89467&oe=5D3C04A2" alt="">
